<resources>
    <string name="app_name">Top Albums</string>
    <string name="albums">Albums</string>
    <string name="name">Name</string>
    <string name="artist_name">Artist Name</string>
    <string name="album_image">Album Image</string>
    <string name="release_date">Release Date</string>
    <string name="content_advisory_rating">Content_Advisory_Rating</string>
    <string name="genre">Genre</string>
</resources>
