<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/details_releaseDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/release_date"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/details_rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/content_advisory_rating"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/details_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/genre"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/details_albumLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:autoLink="web"
            android:textColorLink="#2196F3"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/details_artistLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:autoLink="web"
            android:textColorLink="#2196F3"
            android:textSize="20sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>


